--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
               </div>
           </div>
     </div>
-    <script src="G:\Calculater_Project\index.js"></script>
+    <script src="G:\Calculater_Project\Priyanshu_Calculator\index.js"></script>
 </body>
 </html>
